[gd_scene load_steps=7 format=3 uid="uid://cnpbl287x1vgp"]

[ext_resource type="Script" path="res://scenes/interests.gd" id="1_6bco0"]
[ext_resource type="FontFile" uid="uid://7x61o34kfaic" path="res://fonts/KOMIKAX_.ttf" id="2_2o2vp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34inb"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ac8s0"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcuq1"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_8ndqp"]
Button/font_sizes/font_size = 18
Button/styles/normal = SubResource("StyleBoxFlat_34inb")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 18
Panel/styles/panel = SubResource("StyleBoxFlat_ac8s0")
TextEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
TextEdit/font_sizes/font_size = 18
TextEdit/styles/normal = SubResource("StyleBoxFlat_bcuq1")

[node name="myInterests" type="Node2D"]
script = ExtResource("1_6bco0")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
theme = SubResource("Theme_8ndqp")

[node name="Label" type="Label" parent="Panel"]
offset_left = 427.0
offset_top = 33.0
offset_right = 721.0
offset_bottom = 100.0
theme_override_colors/font_shadow_color = Color(0.541176, 0.45098, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_2o2vp")
theme_override_font_sizes/font_size = 40
text = "My Interests"

[node name="interest1label" type="Label" parent="Panel"]
offset_left = 368.0
offset_top = 170.0
offset_right = 457.0
offset_bottom = 196.0
text = "Interest 1:"

[node name="interest2label" type="Label" parent="Panel"]
offset_left = 368.0
offset_top = 310.0
offset_right = 457.0
offset_bottom = 336.0
text = "Interest 2:
"
metadata/_edit_use_anchors_ = true

[node name="interest3label" type="Label" parent="Panel"]
offset_left = 368.0
offset_top = 450.0
offset_right = 457.0
offset_bottom = 476.0
text = "Interest 3:"
metadata/_edit_use_anchors_ = true

[node name="interest1" type="TextEdit" parent="Panel"]
offset_left = 556.0
offset_top = 167.0
offset_right = 760.0
offset_bottom = 209.0
placeholder_text = "Enter Interest"

[node name="interest2" type="TextEdit" parent="Panel"]
offset_left = 556.0
offset_top = 307.0
offset_right = 760.0
offset_bottom = 349.0
placeholder_text = "Enter Interest"

[node name="interest3" type="TextEdit" parent="Panel"]
offset_left = 556.0
offset_top = 445.0
offset_right = 760.0
offset_bottom = 487.0
placeholder_text = "Enter Interest"

[node name="save" type="Button" parent="Panel"]
offset_left = 1033.0
offset_top = 574.0
offset_right = 1115.0
offset_bottom = 620.0
text = "Save "

[connection signal="text_changed" from="Panel/interest1" to="." method="_on_interest_1_text_changed"]
[connection signal="text_changed" from="Panel/interest2" to="." method="_on_interest_2_text_changed"]
[connection signal="text_changed" from="Panel/interest3" to="." method="_on_interest_3_text_changed"]
[connection signal="pressed" from="Panel/save" to="." method="_on_save_pressed"]
